--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
-<H1> Intonation Marketing </H1>
- <H2> Spending and Scaling at the right time </H2>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Intonation Marketings</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+	<H1> Intonation Marketing </H1>
+	<H2> Spending and Scaling at the right time </H2>
+	<script src="index.js"></script>
+  </body>
+</html>
+
 
   
   
