--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
 	<H1> Intonation Marketing </H1>
 	<H2> Spending and Scaling at the right time </H2>
+	<p>Learn why an audit is a worthwhile starting place </p>
+	<a href="mailto:craig@IntonationMarketing.com"> Send me an email</a>
 	<script src="index.js"></script>
   </body>
 </html>
