--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Intonation Marketing</title>
-    <link rel="stylesheet" href="style.css">
+    <style type="text/css">
+    	img{
+    		max-width: 100%;
+    	}
+    </style>
   </head>
   <body>
 	<H1> Intonation Marketing </H1>
 	<H2> Spending and Scaling at the right time </H2>
+	<h3>Page speed</h3>
+	<img src="images/richard-brutyo-Sg3XwuEpybU-unsplash.jpg">
+	<p>SomLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<h3>Ad Copy</h3>
+	<img src="images/taylor-kopel-WX4i1Jq_o0Y-unsplash.jpg">
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<h3>Langing Page</h3>
+	<img src="images/victor-grabarczyk-N04FIfHhv_k-unsplash.jpg">
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<p>Learn why an audit is a worthwhile starting place </p>
 	<a href="mailto:craig@IntonationMarketing.com"> Send me an email</a>
-	<script src="index.js"></script>
   </body>
 </html>
 
