--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid d-flex align-items-center">
-        <a class="navbar-brand" href="#">Intonation Marketing</a>
+        <a class="navbar-brand" href="#">
+					<img class="logo" src="/images/intonation-marketing-logo.svg"/>
+					<span class="fw-semibold">Intonation Marketing</span>
+				</a>
         <button class="navbar-toggler d-flex align-items-center" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="toggle-text">Menu</span>
+          <span class="toggle-text d-none">Menu</span>
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" id="navbarSupportedContent" data-bs-toggle="offcanvas">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLightLabel">Intonation Marketing</h5>
+						<img class="logo" src="/images/intonation-marketing-logo.svg"/>
+						<h5 class="offcanvas-title" id="offcanvasNavbarLightLabel">Intonation Marketing</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -148,8 +152,8 @@
     </div>
 		<div class="container mt-5 pt-5 pb-5">
       <div class="">
-				<p>Made with ♥ in Fayetteville, Arkansas.</p>
-				<p>Copyright © 2017-2022 Discosloth.</p>
+				<p>Made with ♥ in California.<br/>
+				Copyright © 2022 Intonation Marketing LLC</p>
       </div>
     </div>
   </body>
