--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Intonation Marketing</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/intonation-marketing.css">
+    <link rel="stylesheet" href="intonation-marketing.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid d-flex align-items-center">
         <a class="navbar-brand" href="#">
-					<img class="logo" src="/images/intonation-marketing-logo.svg"/>
+					<img class="logo" src="images/intonation-marketing-logo.svg"/>
 					<span class="fw-semibold">Intonation Marketing</span>
 				</a>
         <button class="navbar-toggler d-flex align-items-center" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,7 +22,7 @@
         </button>
         <div class="offcanvas offcanvas-end" id="navbarSupportedContent" data-bs-toggle="offcanvas">
           <div class="offcanvas-header">
-						<img class="logo" src="/images/intonation-marketing-logo.svg"/>
+						<img class="logo" src="images/intonation-marketing-logo.svg"/>
 						<h5 class="offcanvas-title" id="offcanvasNavbarLightLabel">Intonation Marketing</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
